Changes in the CSS to avoid overlapping of titles. Refactoring of the data function into small functions. Removed the xmlHTTPRequests in favour of the fetch API. Refactoring of the getData function to adapt to the new function

--- a/css/style.css
+++ b/css/style.css
@@ -39,6 +39,7 @@ body {
 
 #teamNameStyle {
     font-size: 62pt;
+    line-height:1.3;
 }
 
 body {
@@ -80,7 +81,7 @@ body {
 }
 
 .data {
-    font-size: 6em !important;
-    line-height: .4;
+    font-size: 6em;
+    line-height: .8;
     color: #fff !important;
 }
